<resources>
    <string name="app_name" translatable="false">TabletopTimer</string>
    <string name="start_game">Play</string>
    <string name="player">Player</string>
    <string name="too_few_players">Too few players</string>
    <string name="color">Choose color</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_timer">Game</string>
    <string name="finish">Finish</string>
    <string name="placeholder" translatable="false">Placeholder</string>
    <string name="time_remaining" translatable="false">%1$d:%2$02d</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="set_time">Time per turn</string>
    <string name="new_game">New game</string>
    <string name="results">Results</string>
    <string name="carcassonne" translatable="false">Carcassonne</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>